--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.3.3",
+    "@tarojs/plugin-mock": "^0.0.7",
     "@tarojs/react": "3.3.3",
     "@tarojs/runtime": "3.3.3",
     "@tarojs/taro": "3.3.3",
     "@tarojs/taro-rn": "3.3.3",
+    "lodash.template": "^4.5.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-native": "^0.64.0"
@@ -58,6 +60,8 @@
     "@tarojs/webpack-runner": "3.3.3",
     "@types/react": "^17.0.2",
     "@types/webpack-env": "^1.13.6",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "babel-preset-taro": "3.3.3",
     "eslint": "^6.8.0",
     "eslint-config-taro": "3.3.3",
@@ -67,8 +71,6 @@
     "install-peerdeps": "^3.0.3",
     "pod-install": "^0.1.23",
     "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^4.15.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
     "typescript": "^4.1.0"
   }
 }
