--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quark-app",
   "version": "1.0.0",
   "private": true,
-  "description": "",
+  "description": "quark",
   "templateInfo": {
     "name": "react-native",
     "typescript": true,
@@ -23,7 +23,7 @@
     "dev:alipay": "npm run build:alipay -- --watch",
     "dev:tt": "npm run build:tt -- --watch",
     "dev:h5": "npm run build:h5 -- --watch",
-    "dev:rn": "npm run build:rn -- --watch",
+    "dev:rn": "npm run build:rn -- --watch --qr",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch",
@@ -31,7 +31,7 @@
     "ios": "react-native run-ios --no-packager",
     "start": "npm run dev:rn",
     "podInstall": "pod-install",
-    "upgradePeerdeps": "install-peerdeps @tarojs/taro-rn@3.3.3 -o -Y && install-peerdeps @tarojs/components-rn@3.3.3 -o -Y && install-peerdeps @tarojs/router-rn@3.3.3 -o -Y && pod-install"
+    "upgradePeerdeps": "install-peerdeps @tarojs/taro-rn@3.3.7 -o -Y && install-peerdeps @tarojs/components-rn@3.3.7 -o -Y && install-peerdeps @tarojs/router-rn@3.3.7 -o -Y && pod-install"
   },
   "browserslist": [
     "last 3 versions",
@@ -41,12 +41,12 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.3.3",
+    "@tarojs/components": "3.3.7",
     "@tarojs/plugin-mock": "^0.0.7",
-    "@tarojs/react": "3.3.3",
-    "@tarojs/runtime": "3.3.3",
-    "@tarojs/taro": "3.3.3",
-    "@tarojs/taro-rn": "3.3.3",
+    "@tarojs/react": "3.3.7",
+    "@tarojs/runtime": "3.3.7",
+    "@tarojs/taro": "3.3.7",
+    "@tarojs/taro-rn": "3.3.7",
     "lodash.template": "^4.5.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -54,17 +54,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
-    "@tarojs/cli": "3.3.3",
-    "@tarojs/mini-runner": "3.3.3",
-    "@tarojs/rn-runner": "3.3.3",
-    "@tarojs/webpack-runner": "3.3.3",
+    "@tarojs/cli": "3.3.7",
+    "@tarojs/mini-runner": "3.3.7",
+    "@tarojs/rn-runner": "3.3.7",
+    "@tarojs/webpack-runner": "3.3.7",
     "@types/react": "^17.0.2",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "babel-preset-taro": "3.3.3",
+    "babel-preset-taro": "3.3.7",
     "eslint": "^6.8.0",
-    "eslint-config-taro": "3.3.3",
+    "eslint-config-taro": "3.3.7",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
