--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ios": "react-native run-ios --no-packager",
     "start": "npm run dev:rn",
     "podInstall": "pod-install",
-    "upgradePeerdeps": "install-peerdeps @tarojs/taro-rn@3.3.7 -o -Y && install-peerdeps @tarojs/components-rn@3.3.7 -o -Y && install-peerdeps @tarojs/router-rn@3.3.7 -o -Y && pod-install"
+    "upgradePeerdeps": "install-peerdeps @tarojs/taro-rn@3.3.9 -o -Y && install-peerdeps @tarojs/components-rn@3.3.9 -o -Y && install-peerdeps @tarojs/router-rn@3.3.9 -o -Y && pod-install"
   },
   "browserslist": [
     "last 3 versions",
@@ -41,12 +41,15 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.3.7",
+    "@tarojs/components": "3.3.9",
+    "@tarojs/plugin-html": "^3.3.9",
     "@tarojs/plugin-mock": "^0.0.7",
-    "@tarojs/react": "3.3.7",
-    "@tarojs/runtime": "3.3.7",
-    "@tarojs/taro": "3.3.7",
-    "@tarojs/taro-rn": "3.3.7",
+    "@tarojs/react": "3.3.9",
+    "@tarojs/runtime": "3.3.9",
+    "@tarojs/taro": "3.3.9",
+    "@tarojs/taro-rn": "3.3.9",
+    "antd-mobile": "^5.0.0-beta.10",
+    "babel-plugin-import": "^1.13.3",
     "lodash.template": "^4.5.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -54,17 +57,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
-    "@tarojs/cli": "3.3.7",
-    "@tarojs/mini-runner": "3.3.7",
-    "@tarojs/rn-runner": "3.3.7",
-    "@tarojs/webpack-runner": "3.3.7",
+    "@tarojs/cli": "3.3.9",
+    "@tarojs/mini-runner": "3.3.9",
+    "@tarojs/rn-runner": "3.3.9",
+    "@tarojs/webpack-runner": "3.3.9",
     "@types/react": "^17.0.2",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "babel-preset-taro": "3.3.7",
+    "babel-preset-taro": "3.3.9",
     "eslint": "^6.8.0",
-    "eslint-config-taro": "3.3.7",
+    "eslint-config-taro": "3.3.9",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
