--- a/package.json
+++ b/package.json
@@ -43,13 +43,14 @@
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.3.9",
     "@tarojs/plugin-html": "^3.3.9",
-    "@tarojs/plugin-mock": "^0.0.7",
     "@tarojs/react": "3.3.9",
     "@tarojs/runtime": "3.3.9",
     "@tarojs/taro": "3.3.9",
     "@tarojs/taro-rn": "3.3.9",
+    "@quarkcms/plugin-mock": "0.0.8",
     "antd-mobile": "^5.0.0-beta.10",
     "babel-plugin-import": "^1.13.3",
+    "cors": "^2.8.5",
     "lodash.template": "^4.5.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
