--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -9,7 +9,7 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-# Default value: -Xmx10248m -XX:MaxPermSize=256m
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
 # org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
 # When configured, Gradle will run in incubating parallel mode.
@@ -25,15 +25,15 @@ android.useAndroidX=true
 android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
-FLIPPER_VERSION=0.75.1
+FLIPPER_VERSION=0.99.0
 
 org.gradle.jvmargs=-Xmx1024m
 
 # defalut properties
 # app applicationId
-app_id=com.taro.demo
+app_id=com.tarodemo
 # app name
-app_name=Taro Demo
+app_name=taroDemo
 app_icon=ic_launcher
 app_round_icon=ic_launcher_round
 # app version
