--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "quark-app",
+  "name": "quark-app-next",
   "version": "1.0.0",
   "private": true,
-  "description": "quark",
+  "description": "",
   "templateInfo": {
     "name": "react-native",
     "typescript": true,
@@ -29,9 +29,9 @@
     "dev:quickapp": "npm run build:quickapp -- --watch",
     "android": "react-native run-android --no-packager",
     "ios": "react-native run-ios --no-packager",
-    "start": "npm run dev:rn",
+    "start": "npm run dev:rn --",
     "podInstall": "pod-install",
-    "upgradePeerdeps": "install-peerdeps @tarojs/taro-rn@3.3.9 -o -Y && install-peerdeps @tarojs/components-rn@3.3.9 -o -Y && install-peerdeps @tarojs/router-rn@3.3.9 -o -Y && pod-install"
+    "upgradePeerdeps": "install-peerdeps @tarojs/taro-rn@3.4.13 -o -Y && install-peerdeps @tarojs/components-rn@3.4.13 -o -Y && install-peerdeps @tarojs/router-rn@3.4.13 -o -Y && pod-install"
   },
   "browserslist": [
     "last 3 versions",
@@ -41,34 +41,31 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.3.9",
-    "@tarojs/plugin-html": "^3.3.9",
-    "@tarojs/react": "3.3.9",
-    "@tarojs/runtime": "3.3.9",
-    "@tarojs/taro": "3.3.9",
-    "@tarojs/taro-rn": "3.3.9",
-    "@quarkcms/plugin-mock": "0.0.8",
-    "antd-mobile": "^5.0.0-beta.10",
-    "babel-plugin-import": "^1.13.3",
-    "cors": "^2.8.5",
-    "lodash.template": "^4.5.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-native": "^0.64.0"
+    "@tarojs/components": "3.4.13",
+    "@tarojs/plugin-framework-react": "3.4.13",
+    "@tarojs/react": "3.4.13",
+    "@tarojs/runtime": "3.4.13",
+    "@tarojs/taro": "3.4.13",
+    "@tarojs/taro-rn": "3.4.13",
+    "native-base": "^3.4.9",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-native": "^0.67.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
-    "@tarojs/cli": "3.3.9",
-    "@tarojs/mini-runner": "3.3.9",
-    "@tarojs/rn-runner": "3.3.9",
-    "@tarojs/webpack-runner": "3.3.9",
+    "@tarojs/cli": "3.4.13",
+    "@tarojs/mini-runner": "3.4.13",
+    "@tarojs/rn-runner": "3.4.13",
+    "@tarojs/webpack-runner": "3.4.13",
     "@types/react": "^17.0.2",
+    "@types/react-native": "^0.67.0",
     "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "babel-preset-taro": "3.3.9",
-    "eslint": "^6.8.0",
-    "eslint-config-taro": "3.3.9",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "babel-preset-taro": "3.4.13",
+    "eslint": "^8.12.0",
+    "eslint-config-taro": "3.4.13",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -76,5 +73,9 @@
     "pod-install": "^0.1.23",
     "stylelint": "9.3.0",
     "typescript": "^4.1.0"
+  },
+  "resolutions": {
+    "babel-plugin-minify-dead-code-elimination": "0.5.2",
+    "@types/react": "17.0.45"
   }
 }
