--- a/project.tt.json
+++ b/project.tt.json
@@ -1,6 +1,6 @@
 {
   "miniprogramRoot": "./",
-  "projectname": "quark-app",
+  "projectname": "quark-app-next",
   "appid": "touristappid",
   "setting": {
     "es6": false,
