--- a/.github/workflows/assemble_ios_debug.yml
+++ b/.github/workflows/assemble_ios_debug.yml
@@ -27,7 +27,7 @@ env:
 
 jobs:
   assemble:
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
       - name: Checkout Project
         uses: actions/checkout@v2
@@ -63,11 +63,7 @@ jobs:
         run: |
           yarn build:rn --platform ios
       - name: Install pods
-        run: cd ios && pod install
-      - name: Change react-native-xcode.sh
-        run: |
-          cd node_modules/react-native/scripts
-          echo "exit 0;">react-native-xcode.sh
+        run: cd ios && pod update --no-repo-update
       - name: Import signing certificate
         env:
           SIGNING_CERTIFICATE_P12_DATA: ${{ env.SIGNING_CERTIFICATE_P12_DATA }}
@@ -81,6 +77,7 @@ jobs:
           exec .github/scripts/import-profile.sh
       - name: Build app
         env:
+          SKIP_BUNDLING: 1
           FL_APP_IDENTIFIER: ${{ env.APP_ID }}
           FL_UPDATE_PLIST_DISPLAY_NAME: ${{ env.APP_NAME }}
           FL_UPDATE_PLIST_PATH: taroDemo/Info.plist
@@ -100,3 +97,17 @@ jobs:
           path: |
             ${{ github.workspace }}/ios/taroDemo.ipa
             ${{ github.workspace }}/ios/taroDemo.app.dSYM.zip
+      - name: Rename release assets
+        run: |
+          mv ios/taroDemo.ipa ios/app-${{ env.BUILD_TYPE }}.ipa
+          mv ios/taroDemo.app.dSYM.zip ios/app-${{ env.BUILD_TYPE }}.app.dSYM.zip
+      - name: Upload release assets
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          prerelease: ${{ contains(github.ref, 'beta') }}
+          files: |
+            ios/app-${{ env.BUILD_TYPE }}.ipa
+            ios/app-${{ env.BUILD_TYPE }}.app.dSYM.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
