--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-dist/
-.temp/
-node_modules/
-
-# react native
-
 # OSX
 #
 .DS_Store
@@ -34,6 +28,7 @@ build/
 .gradle
 local.properties
 *.iml
+*.hprof
 
 # node.js
 #
@@ -59,10 +54,11 @@ buck-out/
 */fastlane/screenshots
 
 # Bundle artifact
-*.jsbundle
+# *.jsbundle
 
-# CocoaPods
+# Ruby / CocoaPods
 /ios/Pods/
+/vendor/bundle/
 
 /android/app/src/main/java/com/tarodemo/generated
 
