--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "quark-app-next",
+  "name": "quark-app",
   "version": "1.0.0",
   "private": true,
-  "description": "",
+  "description": "QaurkApp",
   "templateInfo": {
     "name": "react-native",
     "typescript": true,
@@ -31,7 +31,7 @@
     "ios": "react-native run-ios --no-packager",
     "start": "npm run dev:rn --",
     "podInstall": "pod-install",
-    "upgradePeerdeps": "install-peerdeps @tarojs/taro-rn@3.4.13 -o -Y && install-peerdeps @tarojs/components-rn@3.4.13 -o -Y && install-peerdeps @tarojs/router-rn@3.4.13 -o -Y && pod-install"
+    "upgradePeerdeps": "install-peerdeps @tarojs/taro-rn@3.5.3 -o -Y && install-peerdeps @tarojs/components-rn@3.5.3 -o -Y && install-peerdeps @tarojs/router-rn@3.5.3 -o -Y && pod-install"
   },
   "browserslist": [
     "last 3 versions",
@@ -41,41 +41,51 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.4.13",
-    "@tarojs/plugin-framework-react": "3.4.13",
-    "@tarojs/react": "3.4.13",
-    "@tarojs/runtime": "3.4.13",
-    "@tarojs/taro": "3.4.13",
-    "@tarojs/taro-rn": "3.4.13",
-    "native-base": "^3.4.9",
+    "@tarojs/components": "3.5.3",
+    "@tarojs/helper": "3.5.3",
+    "@tarojs/plugin-platform-weapp": "3.5.3",
+    "@tarojs/plugin-platform-alipay": "3.5.3",
+    "@tarojs/plugin-platform-tt": "3.5.3",
+    "@tarojs/plugin-platform-swan": "3.5.3",
+    "@tarojs/plugin-platform-jd": "3.5.3",
+    "@tarojs/plugin-platform-qq": "3.5.3",
+    "@tarojs/router": "3.5.3",
+    "@tarojs/runtime": "3.5.3",
+    "@tarojs/shared": "3.5.3",
+    "@tarojs/taro": "3.5.3",
+    "@tarojs/taro-h5": "3.5.3",
+    "@tarojs/taro-rn": "3.5.3",
+    "@tarojs/plugin-framework-react": "3.5.3",
+    "@tarojs/react": "3.5.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-native": "^0.67.3"
+    "react-native": "^0.68.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.0",
-    "@tarojs/cli": "3.4.13",
-    "@tarojs/mini-runner": "3.4.13",
-    "@tarojs/rn-runner": "3.4.13",
-    "@tarojs/webpack-runner": "3.4.13",
+    "@babel/core": "^7.12.9",
+    "@tarojs/cli": "3.5.3",
+    "@tarojs/rn-runner": "3.5.3",
+    "webpack": "5.69.0",
+    "@tarojs/webpack5-runner": "3.5.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "react-refresh": "^0.11.0",
     "@types/react": "^17.0.2",
     "@types/react-native": "^0.67.0",
     "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "babel-preset-taro": "3.4.13",
+    "babel-preset-taro": "3.5.3",
     "eslint": "^8.12.0",
-    "eslint-config-taro": "3.4.13",
+    "eslint-config-taro": "3.5.3",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "install-peerdeps": "^3.0.3",
     "pod-install": "^0.1.23",
     "stylelint": "9.3.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
     "typescript": "^4.1.0"
   },
   "resolutions": {
-    "babel-plugin-minify-dead-code-elimination": "0.5.2",
     "@types/react": "17.0.45"
   }
 }
