--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
   "miniprogramRoot": "./dist",
   "projectname": "quark-app",
-  "description": "QaurkApp",
+  "description": "quark app",
   "appid": "touristappid",
   "setting": {
     "urlCheck": true,
