--- a/package.json
+++ b/package.json
@@ -43,35 +43,36 @@
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.5.3",
     "@tarojs/helper": "3.5.3",
-    "@tarojs/plugin-platform-weapp": "3.5.3",
+    "@tarojs/plugin-framework-react": "3.5.3",
     "@tarojs/plugin-platform-alipay": "3.5.3",
-    "@tarojs/plugin-platform-tt": "3.5.3",
-    "@tarojs/plugin-platform-swan": "3.5.3",
     "@tarojs/plugin-platform-jd": "3.5.3",
     "@tarojs/plugin-platform-qq": "3.5.3",
+    "@tarojs/plugin-platform-swan": "3.5.3",
+    "@tarojs/plugin-platform-tt": "3.5.3",
+    "@tarojs/plugin-platform-weapp": "3.5.3",
+    "@tarojs/react": "3.5.3",
     "@tarojs/router": "3.5.3",
     "@tarojs/runtime": "3.5.3",
     "@tarojs/shared": "3.5.3",
     "@tarojs/taro": "3.5.3",
     "@tarojs/taro-h5": "3.5.3",
     "@tarojs/taro-rn": "3.5.3",
-    "@tarojs/plugin-framework-react": "3.5.3",
-    "@tarojs/react": "3.5.3",
+    "native-base": "^3.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "^0.68.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@tarojs/cli": "3.5.3",
     "@tarojs/rn-runner": "3.5.3",
-    "webpack": "5.69.0",
     "@tarojs/webpack5-runner": "3.5.3",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "react-refresh": "^0.11.0",
     "@types/react": "^17.0.2",
     "@types/react-native": "^0.67.0",
     "@types/webpack-env": "^1.13.6",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "babel-preset-taro": "3.5.3",
     "eslint": "^8.12.0",
     "eslint-config-taro": "3.5.3",
@@ -80,10 +81,10 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "install-peerdeps": "^3.0.3",
     "pod-install": "^0.1.23",
+    "react-refresh": "^0.11.0",
     "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "typescript": "^4.1.0"
+    "typescript": "^4.1.0",
+    "webpack": "5.69.0"
   },
   "resolutions": {
     "@types/react": "17.0.45"
