--- a/package.json
+++ b/package.json
@@ -41,6 +41,14 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@react-native-async-storage/async-storage": "~1.17.7",
+    "@react-native-community/cameraroll": "~4.1.2",
+    "@react-native-community/clipboard": "~1.5.1",
+    "@react-native-community/geolocation": "~2.1.0",
+    "@react-native-community/netinfo": "~9.3.0",
+    "@react-native-community/slider": "~4.2.4",
+    "@react-native-masked-view/masked-view": "~0.2.7",
+    "@react-native-picker/picker": "~2.4.2",
     "@tarojs/components": "3.5.3",
     "@tarojs/helper": "3.5.3",
     "@tarojs/plugin-framework-react": "3.5.3",
@@ -57,10 +65,30 @@
     "@tarojs/taro": "3.5.3",
     "@tarojs/taro-h5": "3.5.3",
     "@tarojs/taro-rn": "3.5.3",
+    "expo": "~46.0.1",
+    "expo-av": "~11.2.3",
+    "expo-barcode-scanner": "~11.4.0",
+    "expo-brightness": "~10.3.0",
+    "expo-camera": "~12.3.0",
+    "expo-file-system": "~14.1.0",
+    "expo-image-picker": "~13.1.1",
+    "expo-keep-awake": "~10.2.0",
+    "expo-location": "~14.3.0",
+    "expo-modules-core": "~0.11.3",
+    "expo-sensors": "~11.4.0",
     "native-base": "^3.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-native": "^0.68.2"
+    "react-native": "^0.68.2",
+    "react-native-device-info": "~10.0.2",
+    "react-native-gesture-handler": "~1.10.3",
+    "react-native-image-resizer": "~1.4.5",
+    "react-native-pager-view": "~5.4.25",
+    "react-native-safe-area-context": "~4.3.1",
+    "react-native-screens": "3.15.0",
+    "react-native-svg": "~12.4.3",
+    "react-native-syan-image-picker": "0.5.3",
+    "react-native-webview": "~11.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
