--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "quark-app",
+  "name": "quark-app",
   "version": "1.0.0",
   "private": true,
-	"description": "quark app",
+  "description": "QuarkAPP",
   "templateInfo": {
     "name": "react-native",
     "typescript": true,
@@ -31,7 +31,7 @@
     "ios": "react-native run-ios --no-packager",
     "start": "npm run dev:rn --",
     "podInstall": "pod-install",
-    "upgradePeerdeps": "install-peerdeps @tarojs/taro-rn@3.5.5 -o -Y && install-peerdeps @tarojs/components-rn@3.5.5 -o -Y && install-peerdeps @tarojs/router-rn@3.5.5 -o -Y && pod-install"
+    "upgradePeerdeps": "install-peerdeps @tarojs/taro-rn@3.5.6 -o -Y && install-peerdeps @tarojs/components-rn@3.5.6 -o -Y && install-peerdeps @tarojs/router-rn@3.5.6 -o -Y && pod-install"
   },
   "browserslist": [
     "last 3 versions",
@@ -41,56 +41,48 @@
   "author": "",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
-    "@nutui/nutui-react": "^1.3.2",
-    "@tarojs/components": "3.5.5",
-    "@tarojs/helper": "3.5.5",
-    "@tarojs/plugin-framework-react": "3.5.5",
-    "@tarojs/plugin-html": "^3.5.5",
-    "@tarojs/plugin-platform-alipay": "3.5.5",
-    "@tarojs/plugin-platform-jd": "3.5.5",
-    "@tarojs/plugin-platform-qq": "3.5.5",
-    "@tarojs/plugin-platform-swan": "3.5.5",
-    "@tarojs/plugin-platform-tt": "3.5.5",
-    "@tarojs/plugin-platform-weapp": "3.5.5",
-    "@tarojs/react": "3.5.5",
-    "@tarojs/router": "3.5.5",
-    "@tarojs/runtime": "3.5.5",
-    "@tarojs/shared": "3.5.5",
-    "@tarojs/taro": "3.5.5",
-    "@tarojs/taro-h5": "3.5.5",
-    "@tarojs/taro-rn": "3.5.5",
-    "babel-plugin-import": "^1.13.5",
-    "native-base": "^3.4.15",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-native": "^0.68.2"
+    "@tarojs/components": "3.5.6",
+    "@tarojs/helper": "3.5.6",
+    "@tarojs/plugin-platform-weapp": "3.5.6",
+    "@tarojs/plugin-platform-alipay": "3.5.6",
+    "@tarojs/plugin-platform-tt": "3.5.6",
+    "@tarojs/plugin-platform-swan": "3.5.6",
+    "@tarojs/plugin-platform-jd": "3.5.6",
+    "@tarojs/plugin-platform-qq": "3.5.6",
+    "@tarojs/router": "3.5.6",
+    "@tarojs/runtime": "3.5.6",
+    "@tarojs/shared": "3.5.6",
+    "@tarojs/taro": "3.5.6",
+    "@tarojs/taro-h5": "3.5.6",
+    "@tarojs/taro-rn": "3.5.6",
+    "@tarojs/plugin-framework-react": "3.5.6",
+    "@tarojs/react": "3.5.6",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-native": "^0.69.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@tarojs/cli": "3.5.6",
+    "@tarojs/rn-runner": "3.5.6",
+    "webpack": "5.69.0",
+    "@tarojs/webpack5-runner": "3.5.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "@tarojs/cli": "3.5.5",
-    "@tarojs/mini-runner": "3.5.5",
-    "@tarojs/rn-runner": "3.5.5",
-    "@tarojs/webpack-runner": "3.5.5",
-    "@types/react": "^17.0.2",
-    "@types/react-native": "^0.67.0",
+    "react-refresh": "^0.11.0",
+    "@types/react": "^18.0.0",
+    "@types/react-native": "^0.69.5",
     "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "babel-preset-taro": "3.5.5",
+    "babel-preset-taro": "3.5.6",
     "eslint": "^8.12.0",
-    "eslint-config-taro": "3.5.5",
+    "eslint-config-taro": "3.5.6",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "install-peerdeps": "^3.0.3",
     "pod-install": "^0.1.23",
-    "react-refresh": "^0.11.0",
     "stylelint": "9.3.0",
-    "typescript": "^4.1.0",
-    "webpack": "4.46.0"
-  },
-  "resolutions": {
-    "@types/react": "17.0.45"
+    "@typescript-eslint/parser": "^5.20.0",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "typescript": "^4.1.0"
   }
 }
