--- a/package.json
+++ b/package.json
@@ -43,35 +43,36 @@
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.5.6",
     "@tarojs/helper": "3.5.6",
-    "@tarojs/plugin-platform-weapp": "3.5.6",
+    "@tarojs/plugin-framework-react": "3.5.6",
     "@tarojs/plugin-platform-alipay": "3.5.6",
-    "@tarojs/plugin-platform-tt": "3.5.6",
-    "@tarojs/plugin-platform-swan": "3.5.6",
     "@tarojs/plugin-platform-jd": "3.5.6",
     "@tarojs/plugin-platform-qq": "3.5.6",
+    "@tarojs/plugin-platform-swan": "3.5.6",
+    "@tarojs/plugin-platform-tt": "3.5.6",
+    "@tarojs/plugin-platform-weapp": "3.5.6",
+    "@tarojs/react": "3.5.6",
     "@tarojs/router": "3.5.6",
     "@tarojs/runtime": "3.5.6",
     "@tarojs/shared": "3.5.6",
     "@tarojs/taro": "3.5.6",
     "@tarojs/taro-h5": "3.5.6",
     "@tarojs/taro-rn": "3.5.6",
-    "@tarojs/plugin-framework-react": "3.5.6",
-    "@tarojs/react": "3.5.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-native": "^0.69.3"
+    "react-native": "^0.69.3",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@tarojs/cli": "3.5.6",
     "@tarojs/rn-runner": "3.5.6",
-    "webpack": "5.69.0",
     "@tarojs/webpack5-runner": "3.5.6",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
-    "react-refresh": "^0.11.0",
     "@types/react": "^18.0.0",
     "@types/react-native": "^0.69.5",
     "@types/webpack-env": "^1.13.6",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "babel-preset-taro": "3.5.6",
     "eslint": "^8.12.0",
     "eslint-config-taro": "3.5.6",
@@ -80,9 +81,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "install-peerdeps": "^3.0.3",
     "pod-install": "^0.1.23",
+    "react-refresh": "^0.11.0",
     "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "typescript": "^4.1.0"
+    "typescript": "^4.1.0",
+    "webpack": "5.69.0"
   }
 }
